tests/reference/asr-test_zero_division2-d84989f.stderr
semantic error: float floor division by zero is not allowed
 --> tests/errors/test_zero_division2.py:4:16
  |
4 |     print(v // 0.0)
  |                ^^^ float floor division by zero
